--- a/package.json
+++ b/package.json
@@ -51,9 +51,13 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "highlight.js": "^9.8.0",
     "html-loader": "^0.4.4",
     "markdown-loader": "^0.1.7",
+    "marked": "^0.3.6",
     "moment": "^2.16.0",
+    "raw-loader": "^0.5.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^3.0.0"
