--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "classnames": "^2.2.5",
     "highlight.js": "^9.8.0",
     "html-loader": "^0.4.4",
     "markdown-loader": "^0.1.7",
